Business Logic concluded.

--- a/index.html
+++ b/index.html
@@ -56,5 +56,6 @@
 		</main>
 
 		<script src="./styles/js/materialize.min.js"></script>
+		<script src="./build/scripts/imageShrinker.js"></script>
 	</body>
 </html>
