Finished core application

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 						<strong>Developer:</strong> Lucas Ferreira
 					</li>
 					<li class="collection-item">
-						<strong>Version:</strong> 0.5 BETA
+						<strong>Version:</strong> 1.0.0
 					</li>
 				</ul>
 			</div>
